# DictateIn

./: .gitignore  Cargo.toml  README.md  package.ps1
.github/workflows/: ci.yml
docs/: baseline.md
docs/plans/: 2026-07-13-compact-controls-design.md  2026-07-13-settings-interactions-design.md  2026-07-14-silence-segmented-asr-design.md
src/: app.rs  commands.rs  events.rs  logging.rs  main.rs  paths.rs  smoke.rs  state.rs
src/asr/: capabilities.rs  engine.rs  llama_runtime.rs  mod.rs  model_registry.rs  ort_session.rs  partial.rs  worker.rs
src/asr/fun_asr_nano/: mod.rs  runtime.rs
src/asr/qwen3_asr/: feature.rs  mod.rs  runtime.rs
src/asr/sensevoice/: feature.rs  mod.rs  runtime.rs
src/audio/: capture.rs  device.rs  format.rs  mod.rs  resampler.rs  ring_buffer.rs  silence.rs  worker.rs
src/config/: mod.rs  schema.rs  storage.rs  validation.rs
src/hotkey/: binding.rs  hook.rs  mod.rs  state_machine.rs
src/output/: clipboard.rs  foreground.rs  mod.rs  send_input.rs  worker.rs
src/overlay/: mod.rs  window.rs
src/platform/: dpi.rs  mod.rs  single_instance.rs
src/tray/: mod.rs
ui/: app-window.slint
